small fix to put